--- a/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
+++ b/metabolights-webapps/src/main/webapp/WEB-INF/web.xml
@@ -22,8 +22,9 @@
 
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-    metadata-complete="true" id="metaboLights" version="2.5">
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+    metadata-complete="true" id="metaboLights" version="3.0">
 
 	<display-name>MetaboLights</display-name>
 
