--- a/metabolights-dao/pom.xml
+++ b/metabolights-dao/pom.xml
@@ -113,6 +113,11 @@
             <version>8.0.18</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>uk.ac.ebi.metabolights</groupId>
+            <artifactId>metabolights-ws-client</artifactId>
+            <version>4.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
