--- a/metabolights-webapps/pom.xml
+++ b/metabolights-webapps/pom.xml
@@ -576,7 +576,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
