--- a/metabolights-referencelayer/importer/pom.xml
+++ b/metabolights-referencelayer/importer/pom.xml
@@ -89,6 +89,11 @@
             <version>11.2.0.2</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>10.0</version>
+        </dependency>
     </dependencies>
 
 </project>
